package edu.hitsz.aircraft;

public interface AircraftFactory {
    public abstract AbstractAircraft CreatAircraft();
}
